--- a/package.json
+++ b/package.json
@@ -1,161 +1,169 @@
 {
-	"name": "@org.quicko/core",
-	"version": "1.0.0",
-	"description": "A library in typescript for common entities and utilities across Quicko",
-	"author": "Quicko",
-	"main": "dist/cjs/index.js",
-	"module": "dist/esm/index.js",
-	"types": "dist/types/index.d.ts",
-	"scripts": {
-		"clean": "rm -rf dist && npm cache clean --force",
-		"lint": "eslint .",
-		"lint:fix": "eslint . --fix",
-		"prebuild": "npm run clean && npm run lint",
-		"build": "npm run build:cjs && npm run build:esm",
-		"build:cjs": "tsc -p tsconfig.cjs.json",
-		"build:esm": "tsc -p tsconfig.esm.json"
-	},
-	"license": "ISC",
-	"files": [
-		"dist/cjs/*",
-		"dist/esm/*",
-		"dist/types/*"
-	],
-	"exports": {
-		".": {
-			"types": "./dist/types/index.d.ts",
-			"node": {
-				"import": "./dist/esm/index.js",
-				"require": "./dist/cjs/index.js"
-			},
-			"browser": {
-				"import": "./dist/esm/index.js",
-				"require": "./dist/cjs/index.js"
-			},
-			"default": "./dist/esm/index.js"
-		},
-		"./beans": {
-			"types": "./dist/types/src/beans/index.d.ts",
-			"node": {
-				"import": "./dist/esm/src/beans/index.js",
-				"require": "./dist/cjs/src/beans/index.js"
-			},
-			"browser": {
-				"import": "./dist/esm/src/beans/index.js",
-				"require": "./dist/cjs/src/beans/index.js"
-			},
-			"default": "./dist/esm/src/beans/index.js"
-		},
-		"./types": {
-			"types": "./dist/types/src/types/index.d.ts",
-			"node": {
-				"import": "./dist/esm/src/types/index.js",
-				"require": "./dist/cjs/src/types/index.js"
-			},
-			"browser": {
-				"import": "./dist/esm/src/types/index.js",
-				"require": "./dist/cjs/src/types/index.js"
-			},
-			"default": "./dist/esm/src/types/index.js"
-		},
-		"./utils": {
-			"types": "./dist/types/src/utils/index.d.ts",
-			"node": {
-				"import": "./dist/esm/src/utils/index.js",
-				"require": "./dist/cjs/src/utils/index.js"
-			},
-			"browser": {
-				"import": "./dist/esm/src/utils/index.js",
-				"require": "./dist/cjs/src/utils/index.js"
-			},
-			"default": "./dist/esm/src/utils/index.js"
-		},
-		"./utils/date": {
-			"types": "./dist/types/src/utils/date/index.d.ts",
-			"node": {
-				"import": "./dist/esm/src/utils/date/index.js",
-				"require": "./dist/cjs/src/utils/date/index.js"
-			},
-			"browser": {
-				"import": "./dist/esm/src/utils/date/index.js",
-				"require": "./dist/cjs/src/utils/date/index.js"
-			},
-			"default": "./dist/esm/src/utils/date/index.js"
-		},
-		"./logger": {
-			"types": "./dist/types/src/logger/index.d.ts",
-			"node": {
-				"import": "./dist/esm/src/logger/index.js",
-				"require": "./dist/cjs/src/logger/index.js"
-			},
-			"browser": {
-				"import": "./dist/esm/src/logger/index.js",
-				"require": "./dist/cjs/src/logger/index.js"
-			},
-			"default": "./dist/esm/src/logger/index.js"
-		},
-		"./exceptions": {
-			"types": "./dist/types/src/exceptions/index.d.ts",
-			"node": {
-				"import": "./dist/esm/src/exceptions/index.js",
-				"require": "./dist/cjs/src/exceptions/index.js"
-			},
-			"browser": {
-				"import": "./dist/esm/src/exceptions/index.js",
-				"require": "./dist/cjs/src/exceptions/index.js"
-			},
-			"default": "./dist/esm/src/exceptions/index.js"
-		},
-		"./package.json": "./package.json"
-	},
-	"typesVersions": {
-		"*": {
-			"*": [
-				"dist/types/*"
-			],
-			"beans": [
-				"dist/types/src/beans/index.d.ts"
-			],
-			"types": [
-				"dist/types/src/types/index.d.ts"
-			],
-			"utils": [
-				"dist/types/src/utils/index.d.ts"
-			],
-			"utils/date": [
-				"dist/types/src/utils/date/index.d.ts"
-			],
-			"exceptions": [
-				"dist/types/src/exceptions/index.d.ts"
-			],
-			"logger": [
-				"dist/types/src/logger/index.d.ts"
-			]
-		}
-	},
-	"directories": {
-		"lib": "./dist"
-	},
-	"engines": {
-		"node": ">=14"
-	},
-	"dependencies": {
-		"@date-fns/tz": "^1.1.2",
-		"class-transformer": "^0.5.1",
-		"class-validator": "^0.14.1",
-		"date-fns": "^4.1.0",
-		"winston": "^3.17.0"
-	},
-	"devDependencies": {
-		"@types/node": "^22.7.0",
-		"@typescript-eslint/eslint-plugin": "^8.17.0",
-		"@typescript-eslint/parser": "^8.17.0",
-		"esbuild-plugin-eslint": "^0.3.7",
-		"eslint": "^8.2.0",
-		"eslint-config-airbnb": "^19.0.4",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-import-resolver-typescript": "^3.7.0",
-		"ts-node": "^10.9.2",
-		"typescript": "^5.6.2"
-	}
+  "name": "@org-quicko/core",
+  "version": "1.0.0",
+  "description": "A library in typescript for common entities and utilities across Quicko",
+  "author": "Quicko",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/types/index.d.ts",
+  "scripts": {
+    "clean": "rm -rf dist && npm cache clean --force",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "prebuild": "npm run clean && npm run lint",
+    "build": "npm run build:cjs && npm run build:esm",
+    "build:cjs": "tsc -p tsconfig.cjs.json",
+    "build:esm": "tsc -p tsconfig.esm.json"
+  },
+  "license": "ISC",
+  "files": [
+    "dist/cjs/*",
+    "dist/esm/*",
+    "dist/types/*"
+  ],
+  "exports": {
+    ".": {
+      "types": "./dist/types/index.d.ts",
+      "node": {
+        "import": "./dist/esm/index.js",
+        "require": "./dist/cjs/index.js"
+      },
+      "browser": {
+        "import": "./dist/esm/index.js",
+        "require": "./dist/cjs/index.js"
+      },
+      "default": "./dist/esm/index.js"
+    },
+    "./beans": {
+      "types": "./dist/types/src/beans/index.d.ts",
+      "node": {
+        "import": "./dist/esm/src/beans/index.js",
+        "require": "./dist/cjs/src/beans/index.js"
+      },
+      "browser": {
+        "import": "./dist/esm/src/beans/index.js",
+        "require": "./dist/cjs/src/beans/index.js"
+      },
+      "default": "./dist/esm/src/beans/index.js"
+    },
+    "./types": {
+      "types": "./dist/types/src/types/index.d.ts",
+      "node": {
+        "import": "./dist/esm/src/types/index.js",
+        "require": "./dist/cjs/src/types/index.js"
+      },
+      "browser": {
+        "import": "./dist/esm/src/types/index.js",
+        "require": "./dist/cjs/src/types/index.js"
+      },
+      "default": "./dist/esm/src/types/index.js"
+    },
+    "./utils": {
+      "types": "./dist/types/src/utils/index.d.ts",
+      "node": {
+        "import": "./dist/esm/src/utils/index.js",
+        "require": "./dist/cjs/src/utils/index.js"
+      },
+      "browser": {
+        "import": "./dist/esm/src/utils/index.js",
+        "require": "./dist/cjs/src/utils/index.js"
+      },
+      "default": "./dist/esm/src/utils/index.js"
+    },
+    "./utils/date": {
+      "types": "./dist/types/src/utils/date/index.d.ts",
+      "node": {
+        "import": "./dist/esm/src/utils/date/index.js",
+        "require": "./dist/cjs/src/utils/date/index.js"
+      },
+      "browser": {
+        "import": "./dist/esm/src/utils/date/index.js",
+        "require": "./dist/cjs/src/utils/date/index.js"
+      },
+      "default": "./dist/esm/src/utils/date/index.js"
+    },
+    "./logger": {
+      "types": "./dist/types/src/logger/index.d.ts",
+      "node": {
+        "import": "./dist/esm/src/logger/index.js",
+        "require": "./dist/cjs/src/logger/index.js"
+      },
+      "browser": {
+        "import": "./dist/esm/src/logger/index.js",
+        "require": "./dist/cjs/src/logger/index.js"
+      },
+      "default": "./dist/esm/src/logger/index.js"
+    },
+    "./exceptions": {
+      "types": "./dist/types/src/exceptions/index.d.ts",
+      "node": {
+        "import": "./dist/esm/src/exceptions/index.js",
+        "require": "./dist/cjs/src/exceptions/index.js"
+      },
+      "browser": {
+        "import": "./dist/esm/src/exceptions/index.js",
+        "require": "./dist/cjs/src/exceptions/index.js"
+      },
+      "default": "./dist/esm/src/exceptions/index.js"
+    },
+    "./package.json": "./package.json"
+  },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "dist/types/*"
+      ],
+      "beans": [
+        "dist/types/src/beans/index.d.ts"
+      ],
+      "types": [
+        "dist/types/src/types/index.d.ts"
+      ],
+      "utils": [
+        "dist/types/src/utils/index.d.ts"
+      ],
+      "utils/date": [
+        "dist/types/src/utils/date/index.d.ts"
+      ],
+      "exceptions": [
+        "dist/types/src/exceptions/index.d.ts"
+      ],
+      "logger": [
+        "dist/types/src/logger/index.d.ts"
+      ]
+    }
+  },
+  "directories": {
+    "lib": "./dist"
+  },
+  "engines": {
+    "node": ">=14"
+  },
+  "dependencies": {
+    "@date-fns/tz": "^1.1.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "date-fns": "^4.1.0",
+    "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.7.0",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "^8.17.0",
+    "esbuild-plugin-eslint": "^0.3.7",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/org-quicko/core-js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/org-quicko/core-js/issues"
+  },
+  "homepage": "https://github.com/org-quicko/core-js#readme"
 }
