--- a/package.json
+++ b/package.json
@@ -132,6 +132,9 @@
 		"rollup": "^4.40.2",
 		"rollup-plugin-dts": "^6.2.1",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.6.2"
+		"typescript": "^5.6.2",
+		"@types/jest": "^29.5.12",
+		"jest": "^29.7.0",
+		"ts-jest": "^29.2.5"
 	}
 }
