--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@org-quicko/core",
-	"version": "2.0.0-alpha",
+	"version": "2.0.0-beta",
 	"description": "A library in typescript for common entities and utilities across Quicko",
 	"author": "Quicko",
 	"main": "dist/cjs/build/node/index.cjs",
